# FastAPI-Code-Snippets-CICD

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
src/: main.py
src/api/: __init__.py
src/api/v1/: auth.py  snippet.py
src/auth/: auth.py
src/core/: config.py  logger.py
src/db/: db.py
src/models/: role.py  user.py
src/services/: auth.py  snippet.py  user.py
src/tests/unit_tests/: test_snippet_serivces.py
