[tool.poetry]
name = "fastapi-code-snippets-cicd"
version = "0.1.0"
description = ""
authors = ["oleg-afonick <afonick@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["uvicorn"], version = "^0.112.1"}
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"
bcrypt = "^4.2.0"
passlib = "^1.7.4"
jwt = "^1.3.1"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.23.8"
pydantic = {extras = ["email"], version = "^2.8.2"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
greenlet = "^3.0.3"
alembic = "^1.13.2"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
